@@ -22,6 +22,7 @@ import java.util.List;
 
 import org.opensaml.ws.message.MessageContext;
 import org.opensaml.ws.security.SecurityPolicyException;
+import org.opensaml.ws.transport.InTransport;
 import org.opensaml.ws.transport.Transport;
 import org.opensaml.xml.security.CriteriaSet;
 import org.opensaml.xml.security.credential.Credential;
@@ -44,28 +45,35 @@ import org.slf4j.LoggerFactory;
  * </p>
  * 
  * <p>
- * If the inbound message issuer has been previously set in the message context by another rule, then that issuer is
- * used to evaluate the request's X509Credential. If this trust evaluation is successful, the message context's inbound
+ * The entity ID used to perform trust evaluation of the X509 credential is first retrieved via
+ * {@link #getCertificatePresenterEntityID(MessageContext)}. If this value is non-null, trust evaluation 
+ * proceeds on that basis.  If trust evaluation using this entity ID is successful, the message context's inbound
  * transport authentication state will be set to <code>true</code> and processing is terminated. If unsuccessful, a
  * {@link SecurityPolicyException} is thrown.
  * </p>
  * 
  * <p>
- * If no context issuer was previously set, then rule evaluation will be attempted as described in
- * {@link #evaluateCertificateNameDerivedIssuers(X509Credential, MessageContext)}, based on the currently configured
- * certificate name evaluation options. If this method returns a non-null issuer entity ID, it will be set as the
- * inbound message issuer in the message context, the message context's inbound transport issuer authentication state
- * will be set to <code>true</code> and rule processing is terminated. If the method returns null, the message context
- * issuer and transport authentication state will remain unmodified and rule processing continues.
+ * If a non-null value was available from {@link #getCertificatePresenterEntityID(MessageContext)},
+ * then rule evaluation will be attempted as described in
+ * {@link #evaluateCertificateNameDerivedPresenters(X509Credential, MessageContext)}, based on the currently configured
+ * certificate name evaluation options. If this method returns a non-null certificate presenter entity ID,
+ * it will be set on the message context by calling
+ * {@link #setAuthenticatedCertificatePresenterEntityID(MessageContext, String)}
+ * The message context's inbound transport authentication state will be set to <code>true</code> via
+ * {@link InTransport#setAuthenticated(boolean)}.
+ * Rule processing is then terminated. If the method returns null, the client certificate presenter entity ID
+ * and inbound transport authentication state will remain unmodified and rule processing continues.
  * </p>
  * 
  * <p>
- * Finally rule evaluation will proceed as described in {@link #evaluateDerivedIssuers(X509Credential, MessageContext)}.
+ * Finally rule evaluation will proceed as described in
+ * {@link #evaluateDerivedPresenters(X509Credential, MessageContext)}.
  * This is primarily an extension point by which subclasses may implement specific custom logic. If this method returns
- * a non-null issuer entity ID, it will be set as the inbound message issuer in the message context, the message
+ * a non-null client certificate presenter entity ID, it will be set via 
+ * {@link #setAuthenticatedCertificatePresenterEntityID(MessageContext, String)}, the message
  * context's inbound transport authentication state will be set to <code>true</code> and rule processing is
- * terminated. If the method returns null, the message context issuer and transport authentication state will remain
- * unmodified.
+ * terminated. If the method returns null, the client certificate presenter entity ID and transport authentication
+ * state will remain unmodified.
  * </p>
  */
 public class ClientCertAuthRule extends BaseTrustEngineRule<X509Credential> {
@@ -73,14 +81,14 @@ public class ClientCertAuthRule extends BaseTrustEngineRule<X509Credential> {
     /** Logger. */
     private final Logger log = LoggerFactory.getLogger(ClientCertAuthRule.class);
 
-    /** Options for derving issuer names from an X.509 certificate. */
+    /** Options for derving client cert presenter entity ID's from an X.509 certificate. */
     private CertificateNameOptions certNameOptions;
 
     /**
      * Constructor.
      * 
      * @param engine Trust engine used to verify the request X509Credential
-     * @param nameOptions options for deriving issuer names from an X.509 certificate
+     * @param nameOptions options for deriving certificate presenter entity ID's from an X.509 certificate
      * 
      */
     public ClientCertAuthRule(TrustEngine<X509Credential> engine, CertificateNameOptions nameOptions) {
@@ -123,45 +131,82 @@ public class ClientCertAuthRule extends BaseTrustEngineRule<X509Credential> {
      * 
      * @param requestCredential the X509Credential derived from the request
      * @param messageContext the message context being evaluated
-     * @throws SecurityPolicyException thrown if a message context issuer is present and the client certificate token
-     *             can not be trusted on that basis, or if there is error during evaluation processing
+     * @throws SecurityPolicyException thrown if a certificate presenter entity ID available from the message context
+     *              and the client certificate token can not be establishd as trusted on that basis,
+     *              or if there is error during evaluation processing
      */
     protected void doEvaluate(X509Credential requestCredential, MessageContext messageContext)
             throws SecurityPolicyException {
 
-        String contextIssuer = messageContext.getInboundMessageIssuer();
+        String presenterEntityID = getCertificatePresenterEntityID(messageContext);
 
-        if (contextIssuer != null) {
-            log.debug("Attempting client certificate authentication using context issuer: {}", contextIssuer);
-            if (evaluate(requestCredential, contextIssuer, messageContext)) {
-                log.info("Authentication via client certificate succeeded for context issuer entity ID: {}",
-                        contextIssuer);
+        if (presenterEntityID != null) {
+            log.debug("Attempting client certificate authentication using context presenter entity ID: {}",
+                    presenterEntityID);
+            if (evaluate(requestCredential, presenterEntityID, messageContext)) {
+                log.info("Authentication via client certificate succeeded for context presenter entity ID: {}",
+                        presenterEntityID);
                 messageContext.getInboundMessageTransport().setAuthenticated(true);
             } else {
-                log.error("Authentication via client certificate failed for context issuer entity ID {}",
-                        contextIssuer);
+                log.error("Authentication via client certificate failed for context presenter entity ID {}",
+                        presenterEntityID);
                 throw new SecurityPolicyException(
-                        "Client certificate authentication failed for context issuer entity ID");
+                        "Client certificate authentication failed for context presenter entity ID");
             }
             return;
         }
 
-        String derivedIssuer = evaluateCertificateNameDerivedIssuers(requestCredential, messageContext);
-        if (derivedIssuer != null) {
-            log.info("Authentication via client certificate succeeded for certificate-derived issuer entity ID {}",
-                    derivedIssuer);
-            messageContext.setInboundMessageIssuer(derivedIssuer);
+        String derivedPresenter = evaluateCertificateNameDerivedPresenters(requestCredential, messageContext);
+        if (derivedPresenter != null) {
+            log.info("Authentication via client certificate succeeded for certificate-derived presenter entity ID {}",
+                    derivedPresenter);
+            setAuthenticatedCertificatePresenterEntityID(messageContext, derivedPresenter);
             messageContext.getInboundMessageTransport().setAuthenticated(true);
             return;
         }
 
-        derivedIssuer = evaluateDerivedIssuers(requestCredential, messageContext);
-        if (derivedIssuer != null) {
-            log.info("Authentication via client certificate succeeded for derived issuer entity ID {}", derivedIssuer);
-            messageContext.setInboundMessageIssuer(derivedIssuer);
+        derivedPresenter = evaluateDerivedPresenters(requestCredential, messageContext);
+        if (derivedPresenter != null) {
+            log.info("Authentication via client certificate succeeded for derived presenter entity ID {}",
+                    derivedPresenter);
+            setAuthenticatedCertificatePresenterEntityID(messageContext, derivedPresenter);
             messageContext.getInboundMessageTransport().setAuthenticated(true);
             return;
         }
+    }
+
+    /**
+     * Get the entity ID of the presenter of the client TLS certificate, as will be used
+     * for trust evaluation purposes.
+     * 
+     * <p>The default behavior is to return the value of
+     * {@link MessageContext#getInboundMessageIssuer()}.  Subclasses may override to implement
+     * different logic.
+     * </p>
+     * 
+     * @param messageContext the current message context
+     * @return the entity ID of the client TLS certificate presenter
+     */
+    protected String getCertificatePresenterEntityID(MessageContext messageContext) {
+        return messageContext.getInboundMessageIssuer();
+    }
+    
+    /**
+     * Store the sucessfully authenticated derived entity ID of the certificate presenter
+     * in the message context.
+     * 
+     * <p>The default behavior is to set the value by calling
+     * {@link MessageContext#setInboundMessageIssuer(String)}. Subclasses may override to implement
+     * different logic.
+     * </p>
+     * 
+     * @param messageContext the current message context
+     * @param entityID the successfully authenticated derived entity ID of the client TLS
+     *              certificate presenter
+     */
+    protected void setAuthenticatedCertificatePresenterEntityID(MessageContext messageContext,
+            String entityID) {
+        messageContext.setInboundMessageIssuer(entityID);
     }
 
     /** {@inheritDoc} */
@@ -179,7 +224,7 @@ public class ClientCertAuthRule extends BaseTrustEngineRule<X509Credential> {
     }
 
     /**
-     * Evaluate any candidate issuer entity ID's which may be derived from the credential or other message context
+     * Evaluate any candidate presenter entity ID's which may be derived from the credential or other message context
      * information.
      * 
      * <p>
@@ -188,26 +233,51 @@ public class ClientCertAuthRule extends BaseTrustEngineRule<X509Credential> {
      * 
      * <p>
      * If multiple derived candidate entity ID's would satisfy the trust engine criteria, the choice of which one to
-     * return as the canonical issuer value is implementation-specific.
+     * return as the canonical presenter entity ID value is implementation-specific.
      * </p>
      * 
      * @param requestCredential the X509Credential derived from the request
      * @param messageContext the message context being evaluated
-     * @return an issuer entity ID which was successfully evaluated by the trust engine
+     * @return a presenter entity ID which was successfully evaluated by the trust engine
      * @throws SecurityPolicyException thrown if there is error during processing
+     * @deprecated Use {@link #evaluateDerivedPresenters(X509Credential,MessageContext)} instead
      */
     protected String evaluateDerivedIssuers(X509Credential requestCredential, MessageContext messageContext)
+            throws SecurityPolicyException {
+                return evaluateDerivedPresenters(requestCredential, messageContext);
+            }
+
+    /**
+     * Evaluate any candidate presenter entity ID's which may be derived from the credential or other message context
+     * information.
+     * 
+     * <p>
+     * This serves primarily as an extension point for subclasses to implement application-specific logic.
+     * </p>
+     * 
+     * <p>
+     * If multiple derived candidate entity ID's would satisfy the trust engine criteria, the choice of which one to
+     * return as the canonical presenter entity ID value is implementation-specific.
+     * </p>
+     * 
+     * @param requestCredential the X509Credential derived from the request
+     * @param messageContext the message context being evaluated
+     * @return a presenter entity ID which was successfully evaluated by the trust engine
+     * @throws SecurityPolicyException thrown if there is error during processing
+     */
+    protected String evaluateDerivedPresenters(X509Credential requestCredential, MessageContext messageContext)
             throws SecurityPolicyException {
 
         return null;
     }
 
     /**
-     * Evaluate candidate issuer entity ID's which may be derived from the request credential's entity certificate
+     * Evaluate candidate presenter entity ID's which may be derived from the request credential's entity certificate
      * according to the options supplied via {@link CertificateNameOptions}.
      * 
      * <p>
-     * Configured certificate name types are derived as candidate issuers and processed in the following order:
+     * Configured certificate name types are derived as candidate presenter entity ID's and processed
+     * in the following order:
      * <ol>
      * <li>The certificate subject DN string as serialized by the X500DNHandler obtained via
      * {@link CertificateNameOptions#getX500DNHandler()} and using the output format indicated by
@@ -225,32 +295,65 @@ public class ClientCertAuthRule extends BaseTrustEngineRule<X509Credential> {
      * 
      * @param requestCredential the X509Credential derived from the request
      * @param messageContext the message context being evaluated
-     * @return an issuer entity ID which was successfully evaluated by the trust engine
+     * @return a certificate presenter entity ID which was successfully evaluated by the trust engine
      * @throws SecurityPolicyException thrown if there is error during processing
+     * @deprecated Use {@link #evaluateCertificateNameDerivedPresenters(X509Credential,MessageContext)} instead
      */
     protected String evaluateCertificateNameDerivedIssuers(X509Credential requestCredential,
             MessageContext messageContext) throws SecurityPolicyException {
+                return evaluateCertificateNameDerivedPresenters(requestCredential, messageContext);
+            }
 
-        String candidateIssuer = null;
+    /**
+     * Evaluate candidate presenter entity ID's which may be derived from the request credential's entity certificate
+     * according to the options supplied via {@link CertificateNameOptions}.
+     * 
+     * <p>
+     * Configured certificate name types are derived as candidate presenter entity ID's and processed
+     * in the following order:
+     * <ol>
+     * <li>The certificate subject DN string as serialized by the X500DNHandler obtained via
+     * {@link CertificateNameOptions#getX500DNHandler()} and using the output format indicated by
+     * {@link CertificateNameOptions#getX500SubjectDNFormat()}.</li>
+     * <li>Subject alternative names of the types configured via {@link CertificateNameOptions#getSubjectAltNames()}.
+     * Note that this is a LinkedHashSet, so the order of evaluation is the order of insertion.</li>
+     * <li>The first common name (CN) value appearing in the certificate subject DN.</li>
+     * </ol>
+     * </p>
+     * 
+     * <p>
+     * The first one of the above which is successfully evaluated by the trust engine using criteria built from
+     * {@link BaseTrustEngineRule#buildCriteriaSet(String, MessageContext)} will be returned.
+     * </p>
+     * 
+     * @param requestCredential the X509Credential derived from the request
+     * @param messageContext the message context being evaluated
+     * @return a certificate presenter entity ID which was successfully evaluated by the trust engine
+     * @throws SecurityPolicyException thrown if there is error during processing
+     */
+    protected String evaluateCertificateNameDerivedPresenters(X509Credential requestCredential,
+            MessageContext messageContext) throws SecurityPolicyException {
+
+        String candidatePresenter = null;
 
         if (certNameOptions.evaluateSubjectDN()) {
-            candidateIssuer = evaluateSubjectDN(requestCredential, messageContext);
-            if (candidateIssuer != null) {
-                return candidateIssuer;
+            candidatePresenter = evaluateSubjectDN(requestCredential, messageContext);
+            if (candidatePresenter != null) {
+                return candidatePresenter;
             }
         }
 
         if (!certNameOptions.getSubjectAltNames().isEmpty()) {
-            candidateIssuer = evaluateSubjectAltNames(requestCredential, messageContext);
-            if (candidateIssuer != null) {
-                return candidateIssuer;
+            candidatePresenter = evaluateSubjectAltNames(requestCredential, messageContext);
+            if (candidatePresenter != null) {
+                return candidatePresenter;
             }
         }
 
         if (certNameOptions.evaluateSubjectCommonName()) {
-            candidateIssuer = evaluateSubjectCommonName(requestCredential, messageContext);
-            if (candidateIssuer != null) {
-                return candidateIssuer;
+            candidatePresenter = evaluateSubjectCommonName(requestCredential, messageContext);
+            if (candidatePresenter != null) {
+                return candidatePresenter;
             }
         }
 
@@ -258,73 +361,76 @@ public class ClientCertAuthRule extends BaseTrustEngineRule<X509Credential> {
     }
 
     /**
-     * Evaluate the issuer entity ID as derived from the cert subject common name (CN).
+     * Evaluate the presenter entity ID as derived from the cert subject common name (CN).
      * 
      * Only the first CN value from the subject DN is evaluated.
      * 
      * @param requestCredential the X509Credential derived from the request
      * @param messageContext the message context being evaluated
-     * @return an issuer entity ID which was successfully evaluated by the trust engine
+     * @return a presenter entity ID which was successfully evaluated by the trust engine
      * @throws SecurityPolicyException thrown if there is error during processing
      */
     protected String evaluateSubjectCommonName(X509Credential requestCredential, MessageContext messageContext)
             throws SecurityPolicyException {
 
-        log.debug("Evaluating client cert by deriving issuer as cert CN");
+        log.debug("Evaluating client cert by deriving presenter as cert CN");
         X509Certificate certificate = requestCredential.getEntityCertificate();
-        String candidateIssuer = getCommonName(certificate);
-        if (candidateIssuer != null) {
-            if (evaluate(requestCredential, candidateIssuer, messageContext)) {
-                log.info("Authentication succeeded for issuer derived from CN {}", candidateIssuer);
-                return candidateIssuer;
+        String candidatePresenter = getCommonName(certificate);
+        if (candidatePresenter != null) {
+            if (evaluate(requestCredential, candidatePresenter, messageContext)) {
+                log.info("Authentication succeeded for presenter entity ID derived from CN {}",
+                        candidatePresenter);
+                return candidatePresenter;
             }
         }
         return null;
     }
 
     /**
-     * Evaluate the issuer entity ID as derived from the cert subject DN.
+     * Evaluate the presenter entity ID as derived from the cert subject DN.
      * 
      * @param requestCredential the X509Credential derived from the request
      * @param messageContext the message context being evaluated
-     * @return an issuer entity ID which was successfully evaluated by the trust engine
+     * @return a presenter entity ID which was successfully evaluated by the trust engine
      * @throws SecurityPolicyException thrown if there is error during processing
      */
     protected String evaluateSubjectDN(X509Credential requestCredential, MessageContext messageContext)
             throws SecurityPolicyException {
 
-        log.debug("Evaluating client cert by deriving issuer as cert subject DN");
+        log.debug("Evaluating client cert by deriving presenter as cert subject DN");
         X509Certificate certificate = requestCredential.getEntityCertificate();
-        String candidateIssuer = getSubjectName(certificate);
-        if (candidateIssuer != null) {
-            if (evaluate(requestCredential, candidateIssuer, messageContext)) {
-                log.info("Authentication succeeded for issuer derived from subject DN {}", candidateIssuer);
-                return candidateIssuer;
+        String candidatePresenter = getSubjectName(certificate);
+        if (candidatePresenter != null) {
+            if (evaluate(requestCredential, candidatePresenter, messageContext)) {
+                log.info("Authentication succeeded for presenter entity ID derived from subject DN {}",
+                        candidatePresenter);
+                return candidatePresenter;
             }
         }
         return null;
     }
 
     /**
-     * Evaluate the issuer entity ID as derived from the cert subject alternative names specified by types enumerated in
-     * {@link CertificateNameOptions#getSubjectAltNames()}.
+     * Evaluate the presenter entity ID as derived from the cert subject alternative names specified by
+     * types enumerated in {@link CertificateNameOptions#getSubjectAltNames()}.
      * 
      * @param requestCredential the X509Credential derived from the request
      * @param messageContext the message context being evaluated
-     * @return an issuer entity ID which was successfully evaluated by the trust engine
+     * @return a presenter entity ID which was successfully evaluated by the trust engine
      * @throws SecurityPolicyException thrown if there is error during processing
      */
     protected String evaluateSubjectAltNames(X509Credential requestCredential, MessageContext messageContext)
             throws SecurityPolicyException {
 
-        log.debug("Evaluating client cert by deriving issuer from subject alt names");
+        log.debug("Evaluating client cert by deriving presenter from subject alt names");
         X509Certificate certificate = requestCredential.getEntityCertificate();
         for (Integer altNameType : certNameOptions.getSubjectAltNames()) {
             log.debug("Evaluating alt names of type: {}", altNameType.toString());
             List<String> altNames = getAltNames(certificate, altNameType);
             for (String altName : altNames) {
                 if (evaluate(requestCredential, altName, messageContext)) {
-                    log.info("Authentication succeeded for issuer derived from subject alt name {}", altName);
+                    log.info("Authentication succeeded for presenter entity ID derived from subject alt name {}",
+                            altName);
                     return altName;
                 }
             }
